# ocaml-lsp

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .ocamlformat  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  biome.json  dune  dune-project  flake.nix  fmt.nix  format.nix  jsonrpc.opam  lsp.opam  lsp.opam.template  ocaml-lsp-server.opam  ocaml-lsp-server.opam.template  ocamlformat.nix  package.json  shell.nix  unvendor.ml  utop
fiber-unix/test/: barrier_tests.ml  channel_tests.ml  dune  fiber_detached_tests.ml  fiber_thread_test.ml  import.ml  removable_queue_tests.ml  scheduler_tests.ml
jsonrpc-fiber/test/: dune  jsonrpc_fiber_tests.ml  jsonrpc_test.ml
lsp-fiber/test/: dune  lsp_fiber_test.ml  server_test.ml
lsp/src/: array_view.ml  array_view.mli  cancel_request.ml  cli.ml  cli.mli  client.ml  client.mli  client_notification.ml  client_notification.mli  client_request.ml  client_request.mli  codeAction.ml  codeAction.mli  completion.ml  completion.mli  diagnostics.ml  diagnostics.mli  diff.ml  diff.mli  dune  extension.ml  extension.mli  fiber_detached.ml  fiber_io.mli  fiber_mvar.ml  fiber_mvar.mli  fiber_stream.ml  fiber_stream.mli  gprotocol.ml  gprotocol.mli  header.ml  header.mli  import.ml  initialize.ml  initialize.mli  io.ml  io.mli  jsonrpc.ml  jsonrpc.mli  jsonrpc_session.ml  (+40 more)
lsp/test/: array_view_tests.ml  diagnostic_tests.ml  diff_tests.ml  dune  editing_model.ml  fiber_detached_tests.ml  fiber_stream_tests.ml  fiber_thread_test.ml  import.ml  jsonrpc_test.ml  lsp_expect_tests.ml  server_test.ml  slice_quickcheck_tests.ml  string_zipper_quickcheck_tests.ml  string_zipper_tests.ml  substring_tests.ml  text_document_quickcheck_tests.ml  text_document_tests.ml  text_edit_quickcheck_tests.ml  uri_quickcheck_tests.ml  uri_tests.ml
ocaml-lsp-server/: dune
ocaml-lsp-server/bench/: documents.ml  dune  ocaml_lsp_bench.ml  run_bench.ml
ocaml-lsp-server/docs/ocamllsp/: config.md  construct-spec.md  destruct-spec.md  documentation-spec.md  duneContexts-spec.md  getDocumentation-spec.md  hoverExtended-spec.md  inferIntf-spec.md  jump-spec.md  jumpToTypedHole-spec.md  jumpToTypedHoles-spec.md  jumpTypedHoles-spec.md  locate-spec.md  locate-types-spec.md  merlinCallCompatible-specs.md  merlinJump-spec.md  nextHole-spec.md  phrase-spec.md  polaritySearch-spec.md  refactorExtract.md  switchImplIntf-spec.md  typeEnclosing-spec.md  typeExpression-spec.md  typeSearch-spec.md  typedHoles-spec.md  wrappingAstNode-spec.md
ocaml-lsp-server/lib/: client.ml  diagnostics.ml  diagnostics.mli  document.ml  document_store.ml  document_store.mli  document_symbol.ml  document_symbol.mli  dune.ml  dune.mli  fmt.ml  fmt.mli  inference.mli  ocaml_lsp_server.ml  range.mli  state.mli  workspace_symbol.ml  workspaces.mli
ocaml-lsp-server/lib/code_actions/: action_construct.ml  action_destruct.ml  action_destruct.mli  action_inferred_intf.ml  action_inferred_intf.mli  action_refactor_open.ml  action_refactor_open.mli  action_type_annotate.ml
ocaml-lsp-server/lib/custom_requests/: custom_request.ml  custom_request.mli  req_infer_intf.ml  req_switch_impl_intf.ml  req_switch_impl_intf.mli  req_wrapping_ast_node.ml
ocaml-lsp-server/src/: action_add_rec.ml  action_combine_cases.ml  action_combine_cases.mli  action_construct.ml  action_construct.mli  action_destruct.ml  action_destruct_line.ml  action_destruct_line.mli  action_extract.ml  action_extract.mli  action_inferred_intf.ml  action_inferred_intf.mli  action_inline.ml  action_mark_remove_unused.ml  action_mark_remove_unused.mli  action_open_related.ml  action_update_signature.ml  array_view.ml  array_view.mli  base_formatter.ml  base_formatter.mli  bin.ml  bin.mli  call_hierarchy.ml  call_hierarchy.mli  check_for_comments.ml  check_for_comments.mli  client.ml  client.mli  code_action.ml  code_action.mli  code_actions.ml  code_actions.mli  compl.ml  compl.mli  config_data.ml  configuration.ml  configuration.mli  custom_request.ml  custom_request.mli  (+111 more)
ocaml-lsp-server/src/code_actions/: action_add_rec.ml  action_add_rec.mli  action_annotate.ml  action_combine_cases.ml  action_combine_cases.mli  action_construct.ml  action_destruct.ml  action_destruct.mli  action_destruct_line.ml  action_destruct_line.mli  action_extract.ml  action_extract.mli  action_inferred_intf.ml  action_inline.ml  action_inline.mli  action_jump.ml  action_jump.mli  action_mark_remove_unused.ml  action_mark_remove_unused.mli  action_open_dune.ml  action_open_dune.mli  action_open_related.ml  action_open_related.mli  action_refactor_extract.ml  action_refactor_open.ml  action_refactor_open.mli  action_remove_type_annotation.ml  action_type_annotate.ml  action_update_signature.ml  action_wrap_type_in_module.ml  action_wrap_type_in_module.mli  code_action.ml  code_action.mli  diagnostic_util.ml
ocaml-lsp-server/src/custom_requests/: custom_request.ml  custom_request.mli  req_construct.ml  req_construct.mli  req_destruct.ml  req_destruct.mli  req_documentation.ml  req_documentation.mli  req_dump_trace.ml  req_dump_trace.mli  req_dune_contexts.ml  req_dune_contexts.mli  req_get_documentation.ml  req_get_documentation.mli  req_hover_extended.ml  req_hover_extended.mli  req_infer_intf.ml  req_infer_intf.mli  req_jump.ml  req_jump.mli  req_jump_to_typed_hole.ml  req_jump_to_typed_hole.mli  req_jump_typed_hole.ml  req_locate.ml  req_locate.mli  req_locate_types.ml  req_locate_types.mli  req_merlin_call_compatible.ml  req_merlin_call_compatible.mli  req_merlin_jump.ml  req_merlin_jump.mli  req_next_hole.ml  req_phrase.ml  req_phrase.mli  req_polarity_search.ml  req_polarity_search.mli  (+18 more)
ocaml-lsp-server/test/: completion_range_quickcheck_tests.ml  destruct_line_quickcheck_tests.ml  dune  dune_pull_diagnostics_tests.ml  ocaml_lsp_tests.ml  position_prefix_tests.ml  range_quickcheck_tests.ml  range_relations_quickcheck_tests.ml  run_test.ml  run_test_e2e.ml  semantic_tokens_quickcheck_tests.ml
submodules/lev/: .gitignore  .gitrepo  README.cpp.md  README.md  dune  dune-project  lev-fiber-csexp.opam  lev-fiber.opam  lev.opam
(+260 files in other folders)
