(vendored_dirs vendor)

(data_only_dirs submodules)

(rule
 (copy lsp.opam.template jsonrpc.opam.template))

(subdir
 vendor
 (subdir
  fiber
  (copy_files# %{project_root}/submodules/dune/src/fiber/*.{ml,mli})
  (library
   (libraries dyn stdune)
   (name fiber)))
 (subdir
  dyn
  (copy_files# %{project_root}/submodules/dune/otherlibs/dyn/*.{ml,mli})
  (library
   (public_name lsp.dyn)
   (libraries pp)
   (name dyn)))
 (subdir
  stdune-unstable
  (subdir
   dune_filesystem_stubs
   (copy_files#
    %{project_root}/submodules/dune/otherlibs/stdune-unstable/dune_filesystem_stubs/*.*)
   (library
    (name dune_filesystem_stubs)
    (public_name lsp.filesystem_stubs)
    (libraries)
    (foreign_stubs
     (language c)
     (names readdir))))
  (copy_files# %{project_root}/submodules/dune/otherlibs/stdune-unstable/*.*)
  (library
   (name stdune)
   (libraries
    unix
    dyn
    csexp
    (re_export pp)
    dune_filesystem_stubs)
   (foreign_stubs
    (language c)
    (names fcntl_stubs wait3_stubs))
   (public_name lsp.stdune))))
