(vendored_dirs vendor)

(data_only_dirs submodules)

(rule
 (copy lsp.opam.template jsonrpc.opam.template))

(env
 (_
  (flags :standard -alert -unstable)))

(subdir
 vendor
 (subdir
  fiber
  (copy_files# %{project_root}/submodules/dune/src/fiber/*.{ml,mli})
  (library
   (libraries dyn stdune)
   (name fiber)))
 (subdir
  ordering
  (copy_files# %{project_root}/submodules/dune/otherlibs/ordering/*.{ml,mli})
  (library
   (public_name lsp.ordering)
   (name ordering)))
 (subdir
  dyn
  (copy_files# %{project_root}/submodules/dune/otherlibs/dyn/*.{ml,mli})
  (library
   (public_name lsp.dyn)
   (libraries pp ordering)
   (name dyn)))
 (subdir
  stdune
  (subdir
   dune_filesystem_stubs
   (copy_files#
    %{project_root}/submodules/dune/otherlibs/stdune/dune_filesystem_stubs/*.*)
   (library
    (name dune_filesystem_stubs)
    (public_name lsp.filesystem_stubs)
    (libraries)
    (foreign_stubs
     (language c)
     (names readdir))))
  (copy_files# %{project_root}/submodules/dune/otherlibs/stdune/*.*)
  (library
   (name stdune)
   (libraries
    unix
    dyn
    ordering
    csexp
    (re_export pp)
    dune_filesystem_stubs)
   (foreign_stubs
    (language c)
    (names fcntl_stubs wait3_stubs))
   (public_name lsp.stdune))))
