(vendored_dirs vendor)

(data_only_dirs submodules)

(rule
 (copy lsp.opam.template jsonrpc.opam.template))

(env
 (_
  (flags :standard -alert -unstable)))

(subdir
 vendor
 (subdir
  lev-fiber-csexp
  (subdir
   util
   (library
    (name lev_fiber_csexp)
    (libraries fiber csexp stdune dyn lev_fiber)))
  (copy_files# %{project_root}/submodules/lev/lev-fiber-csexp/src/*.{ml,mli}))
 (subdir
  lev-fiber
  (subdir
   util
   (copy_files# %{project_root}/submodules/lev/lev-fiber/src/util/*.{ml,mli})
   (library
    (name lev_fiber_util)
    (libraries stdune threads.posix)))
  (copy_files# %{project_root}/submodules/lev/lev-fiber/src/*.{ml,mli})
  (library
   (name lev_fiber)
   (libraries unix dyn stdune threads.posix fiber lev lev_fiber_util)))
 (subdir
  lev
  (copy_files# %{project_root}/submodules/lev/lev/vendor/*.c)
  (copy_files#
   %{project_root}/submodules/lev/lev/vendor/{ev,ev_vars,ev_wrap}.h)
  (copy_files# %{project_root}/submodules/lev/lev/src/*.{ml,mli,c,h})
  (library
   (name lev)
   (synopsis "libev bindings")
   (libraries unix)
   (foreign_stubs
    (language c)
    (flags :standard -libm)
    (extra_deps
     ev_kqueue.c
     ev_epoll.c
     ev_iouring.c
     ev_poll.c
     ev_port.c
     ev_select.c
     ev_win32.c)
    (names lev_stubs ev))))
 (subdir
  fiber
  (copy_files# %{project_root}/submodules/dune/src/fiber/*.{ml,mli})
  (library
   (libraries dyn stdune)
   (name fiber)))
 (subdir
  ordering
  (copy_files# %{project_root}/submodules/dune/otherlibs/ordering/*.{ml,mli})
  (library
   (public_name lsp.ordering)
   (name ordering)))
 (subdir
  dyn
  (copy_files# %{project_root}/submodules/dune/otherlibs/dyn/*.{ml,mli})
  (library
   (public_name lsp.dyn)
   (libraries pp ordering)
   (name dyn)))
 (subdir
  stdune
  (subdir
   dune_filesystem_stubs
   (copy_files#
    %{project_root}/submodules/dune/otherlibs/stdune/dune_filesystem_stubs/*.*)
   (library
    (name dune_filesystem_stubs)
    (public_name lsp.filesystem_stubs)
    (libraries)
    (foreign_stubs
     (language c)
     (names readdir))))
  (copy_files# %{project_root}/submodules/dune/otherlibs/stdune/*.*)
  (library
   (name stdune)
   (libraries
    unix
    dyn
    ordering
    csexp
    (re_export pp)
    dune_filesystem_stubs)
   (foreign_stubs
    (language c)
    (names fcntl_stubs wait3_stubs))
   (public_name lsp.stdune))))
