(library
 (name fiber_unix_expect_tests)
 (enabled_if
  (>= %{ocaml_version} 4.08))
 (inline_tests)
 (libraries
  fiber
  jsonrpc
  fiber_unix
  stdune
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.config
  ppx_expect.config_types
  ppx_expect.common
  base
  ppx_inline_test.config)
 (preprocess
  (pps ppx_expect)))
