(executable
 (name jsonrpc_test)
 (modules jsonrpc_test)
 (preprocess future_syntax)
 (libraries fiber fiber_unix jsonrpc jsonrpc_fiber lsp ppx_yojson_conv_lib
   stdune threads.posix yojson))

(rule
 (alias test)
 (action
  (run ./jsonrpc_test.exe)))

(library
 (name jsonrpc_fiber_tests)
 (modules :standard \ jsonrpc_test)
 (enabled_if
  (>= %{ocaml_version} 4.08))
 (inline_tests)
 (libraries
  base
  fiber
  fiber_test
  fiber_unix
  jsonrpc
  jsonrpc_fiber
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.common
  ppx_expect.config
  ppx_expect.config_types
  ppx_inline_test.config
  stdune
  yojson)
 (preprocess
  (pps ppx_expect)))
