(library
 (name jsonrpc_fiber_tests)
 (enabled_if
  (>= %{ocaml_version} 4.08))
 (inline_tests)
 (libraries
  base
  dyn
  fiber
  fiber_test
  jsonrpc
  jsonrpc_fiber
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.common
  ppx_expect.config
  ppx_expect.config_types
  ppx_inline_test.config
  stdune
  yojson)
 (preprocess
  (pps ppx_expect)))
