(library
 (name jsonrpc_fiber_tests)
 (enabled_if
  (>= %{ocaml_version} 4.08))
 (inline_tests)
 (libraries
  base
  dyn
  fiber
  fiber_test
  jsonrpc
  jsonrpc_fiber
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.config
  ppx_expect.config_types
  ppx_inline_test.config
  ppx_expect.runtime_types
  stdune
  yojson)
 (preprocess
  (pps ppx_expect)))
