; we cannot use the normal test alias because cinaps overtakes it

(executable
 (name server_test)
 (libraries stdune fiber_unix lsp lsp_fiber jsonrpc yojson
   ppx_yojson_conv_lib fiber threads.posix)
 (preprocess future_syntax))

(rule
 (alias test)
 (action
  (run ./server_test.exe)))

(rule
 (alias server-test)
 (action
  (run ./server_test.exe)))
