; we cannot use the normal test alias because cinaps overtakes it

(library
 (name lsp_fiber_tests)
 (inline_tests)
 (preprocess
  (pps ppx_expect))
 (enabled_if
  (>= %{ocaml_version} 4.08))
 (libraries
  fiber
  yojson
  jsonrpc
  threads.posix
  ppx_yojson_conv_lib
  jsonrpc_fiber
  fiber_unix
  fiber_test
  lsp_fiber
  lsp
  stdune
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.config
  ppx_expect.config_types
  ppx_expect.common
  base
  ppx_inline_test.config))
