(include_subdirs unqualified)

(library
 (name lsp)
 (public_name lsp)
 (libraries stdune yojson threads.posix ppx_yojson_conv_lib)
 (preprocess future_syntax)
 (flags :standard "-open" "Ppx_yojson_conv_lib" "-open" "Yojson_conv")
 (lint
  (pps ppx_yojson_conv)))

(ocamllex
 (modules text_document_text))

; [Printf.ifprintf] doesn't have the right type before ocaml/ocaml#201, and
; [make_iprintf] doesn't exist before ocaml/ocaml#267

(rule
 (targets logger_helper.ml)
 (enabled_if
  (>= %{ocaml_version} 4.03.0))
 (action
  (with-stdout-to
   %{targets}
   (echo "let ifprintf oc fmt = Printf.ifprintf oc fmt"))))

(rule
 (targets logger_helper.ml)
 (enabled_if
  (< %{ocaml_version} 4.03.0))
 (action
  (with-stdout-to
   %{targets}
   (echo
     "let ifprintf oc (CamlinternalFormatBasics.Format (fmt, _)) =\nCamlinternalFormat.make_printf (fun _ _ -> ()) oc End_of_acc fmt"))))

(cinaps
 (files types.mli types.ml)
 (libraries lsp_gen))
