(include_subdirs unqualified)

(library
 (name lsp)
 (public_name lsp)
 (libraries stdune yojson threads.posix ppx_yojson_conv_lib fiber uutf uri)
 (preprocess future_syntax)
 (flags :standard "-open" "Ppx_yojson_conv_lib" "-open" "Yojson_conv")
 (lint
  (pps ppx_yojson_conv)))

(cinaps
 (files types.mli types.ml)
 (libraries lsp_gen))
