(library
 (name lsp_tests)
 (enabled_if
  (>= %{ocaml_version} 4.08))
 (inline_tests)
 (libraries
  stdune
  lsp
  yojson
  dyn
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  base
  base_quickcheck
  ppx_expect.config
  ppx_expect.config_types
  ppx_inline_test.config
  ppx_sexp_conv.runtime-lib)
 (preprocess
  (pps ppx_expect base_quickcheck.ppx_quickcheck ppx_sexp_conv)))
