(library
 (name ocaml_lsp_server)
 (libraries
  dyn
  xdg
  dune-build-info
  fiber
  lev
  lev_fiber
  lev_fiber_csexp
  jsonrpc
  spawn
  lsp
  lsp_fiber
  dot-merlin-reader.merlin_dot_protocol
  merlin.analysis
  merlin.kernel
  merlin.merlin_utils
  merlin.parsing
  merlin.query_commands
  merlin.query_protocol
  merlin.specific
  merlin.typing
  merlin.utils
  octavius
  omd
  ppx_yojson_conv_lib
  re
  result
  stdune
  ordering
  csexp
  yojson
  dune_rpc
  ocamlformat-rpc-lib
  ocamlc_loc))

(include_subdirs unqualified)
