(library
 (name ocaml_lsp_server)
 (libraries
  dyn
  xdg
  unix
  dune-build-info
  fiber
  chrome-trace
  lev
  lev_fiber
  lev_fiber_csexp
  jsonrpc
  spawn
  lsp
  lsp_fiber
  merlin-lib.dot_protocol
  merlin-lib.analysis
  merlin-lib.kernel
  merlin-lib.ocaml_parsing
  merlin-lib.query_commands
  merlin-lib.query_protocol
  merlin-lib.ocaml_merlin_specific
  merlin-lib.ocaml_typing
  merlin-lib.ocaml_utils
  merlin-lib.utils
  merlin-lib.extend
  merlin-lib.commands
  cmarkit
  odoc_parser
  ppx_yojson_conv_lib
  re
  stdune
  ordering
  csexp
  yojson
  dune-rpc
  ocamlformat-rpc-lib
  ocamlc-loc
  base)
 (lint
  (pps ppx_yojson_conv))
 (instrumentation
  (backend bisect_ppx)))

(include_subdirs unqualified)
