(library
 (name ocaml_lsp_server)
 (libraries
  async
  async_log
  base
  chrome-trace
  cmarkit
  core
  core_unix
  csexp
  dune-build-info
  dune-rpc
  dyn
  fiber
  fiber_async
  jsonrpc
  lev_fiber_async
  lsp
  lsp_fiber
  merlin-lib.analysis
  merlin-lib.commands
  merlin-lib.dot_protocol
  merlin-lib.extend
  merlin-lib.kernel
  merlin-lib.ocaml_merlin_specific
  merlin-lib.ocaml_parsing
  merlin-lib.ocaml_preprocess
  merlin-lib.ocaml_typing
  merlin-lib.ocaml_utils
  merlin-lib.query_commands
  merlin-lib.query_protocol
  merlin-lib.utils
  ocamlc-loc
  ocamlformat-rpc-lib
  odoc-parser
  ordering
  ppx_string
  ppx_yojson_conv_lib
  ppxlib
  re
  re2
  spawn
  stdune
  unix
  yojson)
 (preprocess (
  pps
  ppx_let
  ppx_log
  ppx_yojson_conv
  -no-locations-check
  ppx_expect
  ppx_here
  ppx_sexp_conv
  ppx_sexp_message))
;; (preprocess
;;  (pps ppx_let ppx_log ppx_yojson_conv ppx_sexp_conv))
  (flags (
    :standard
    -open
    Cmarkit
    -open
    Lev_fiber_async
    -open
    Ocaml_preprocess
    -open
    Query_protocol
    -open
    Query_commands
    -open
    Ppx_yojson_conv_lib.Yojson_conv
    -alert
    -unstable
    -w
    -60))
 (instrumentation
  (backend bisect_ppx)))

(include_subdirs unqualified)
