(dirs :standard \ e2e)

(library
 (modules ocaml_lsp_tests position_prefix_tests)
 (name ocaml_lsp_tests)
 (enabled_if
  (>= %{ocaml_version} 4.08))
 (inline_tests)
 (libraries
  stdune
  ocaml_lsp_server
  merlin-lib.kernel
  lsp
  yojson
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  base
  ppx_expect.common
  ppx_expect.config
  ppx_expect.config_types
  ppx_inline_test.config)
 (preprocess
  (pps ppx_expect)))

(executable
 (modules run_test_e2e)
 (name run_test_e2e))
