(library
 (modules
  ocaml_lsp_tests
  completion_range_quickcheck_tests
  destruct_line_quickcheck_tests
  position_prefix_tests
  range_quickcheck_tests
  range_relations_quickcheck_tests
  semantic_tokens_quickcheck_tests)
 (name ocaml_lsp_tests)
 (enabled_if
  (>= %{ocaml_version} 4.08))
 (inline_tests)
 (libraries
  stdune
  ocaml_lsp_server
  merlin-lib.kernel
  lsp
  yojson
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  base
  base_quickcheck
  editing_test_model
  ppx_expect.config
  ppx_expect.config_types
  ppx_inline_test.config
  ppx_sexp_conv.runtime-lib)
 (preprocess
  (pps ppx_expect base_quickcheck.ppx_quickcheck ppx_sexp_conv)))
