(env
 (_
  (env-vars
   (OCAMLLSP_TEST true)
   (LEV_DEBUG 1))))

(library
 (name ocaml_lsp_e2e)
 (inline_tests
  (enabled_if
   (= %{os_type} Unix))
  (deps
   %{bin:ocamlformat-rpc}
   for_ppx.ml
   for_pp.ml
   (package ocaml-lsp-server)))
 (libraries
  stdune
  fiber
  yojson
  ppx_yojson_conv_lib
  lev_fiber
  lev
  spawn
  jsonrpc
  lsp
  lsp_fiber
  ocaml_lsp_server
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  base
  ppx_expect.common
  ppx_expect.config
  ppx_expect.config_types
  ppx_inline_test.config)
 (preprocessor_deps for_pp.sh)
 (preprocess
  (per_module
   ((action
     (run
      sh ;; we don't rely on the shebang line for windoze
      %{project_root}/ocaml-lsp-server/test/e2e-new/for_pp.sh
      %{input-file}))
    for_pp)
   ((pps ppx_expect)
    action_extract
    action_inline
    action_mark_remove
    code_actions
    completion
    doc_to_md
    document_flow
    for_ppx
    hover_extended
    metrics
    semantic_hl_data
    semantic_hl_helpers
    semantic_hl_tests
    start_stop
    test
    with_pp
    with_ppx
    workspace_change_config))))
