(library
 (name lev_fiber_csexp_tests)
 (libraries
  fiber
  csexp
  lev
  lev_fiber
  lev_fiber_csexp
  stdune
  unix
  threads.posix
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.config
  ppx_expect.config_types
  ppx_expect.common
  base
  ppx_inline_test.config)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))
